## Process this file with automake to generate a Makefile.in
## To build all programs with GTK+ uncomment these lines.

bin_PROGRAMS = Immo
Immo_SOURCES = main.c fenetre_principale.c fenetre_principale.h\
					formule.c formule.h list.c list.h 

Immo_LDADD = $(GTK_LIBS)
Immo_CFLAGS = $(GTK_CFLAGS)
CLEANFILES = *~
